Switch rakaly uploader