@@ -1,11 +1,16 @@
 package com.crschnick.pdx_unlimiter.app.util;
 
+import com.crschnick.pdx_unlimiter.app.core.ErrorHandler;
+import com.crschnick.pdx_unlimiter.app.core.PdxuInstallation;
 import com.crschnick.pdx_unlimiter.app.core.Settings;
 import com.crschnick.pdx_unlimiter.app.core.TaskExecutor;
 import com.crschnick.pdx_unlimiter.app.gui.dialog.GuiErrorReporter;
+import com.crschnick.pdx_unlimiter.app.savegame.SavegameActions;
 import com.crschnick.pdx_unlimiter.app.savegame.SavegameEntry;
 import com.crschnick.pdx_unlimiter.app.savegame.SavegameStorage;
 import com.crschnick.pdx_unlimiter.core.info.SavegameInfo;
+import com.crschnick.pdx_unlimiter.core.info.eu4.Eu4SavegameInfo;
+import com.crschnick.pdx_unlimiter.core.info.eu4.Eu4Tag;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import javafx.scene.control.Alert;
@@ -50,7 +55,7 @@ public class RakalyWebHelper {
         alert.showAndWait();
     }
 
-    public static <T, I extends SavegameInfo<T>> void uploadSavegame(SavegameStorage<T, I> cache, SavegameEntry<T, I> entry) {
+    public static void uploadSavegame(SavegameEntry<?,?> entry) {
         if (Settings.getInstance().getRakalyApiKey().isEmpty() || Settings.getInstance().getRakalyUserId().isEmpty()) {
             showUsageDialog();
             return;
@@ -58,68 +63,20 @@ public class RakalyWebHelper {
 
         TaskExecutor.getInstance().submitTask(() -> {
             try {
-                byte[] body = Files.readAllBytes(cache.getPath(entry).resolve("savegame.eu4"));
-                String saveId = executePost(cache.getFileName(entry), new URL("https://rakaly.com/api/saves"), body);
-                ThreadHelper.browse("https://rakaly.com/eu4/saves/" + saveId);
+                var proc = new ProcessBuilder(
+                        PdxuInstallation.getInstance().getRakalyExecutable().toString(),
+                        "upload",
+                        "--user", Settings.getInstance().getRakalyUserId().get(),
+                        "--api-key", Settings.getInstance().getRakalyApiKey().get(),
+                        SavegameStorage.EU4.getSavegameFile((SavegameEntry<Eu4Tag, Eu4SavegameInfo>) entry).toString())
+                        .redirectError(ProcessBuilder.Redirect.DISCARD)
+                        .start();
+                var out = new String(proc.getInputStream().readAllBytes());
+                out.lines().findFirst().ifPresent(l -> {
+                    ThreadHelper.browse("https://rakaly.com/eu4/saves/" + l);
+                });
             } catch (Exception e) {
-                GuiErrorReporter.showSimpleErrorMessage(e.getMessage());
-            }
-        }, true);
-    }
-
-    private static String executePost(String sgName, URL targetURL, byte[] data) throws IOException {
-        HttpsURLConnection connection = null;
-        try {
-            connection = (HttpsURLConnection) targetURL.openConnection();
-            connection.setRequestMethod("POST");
-            connection.addRequestProperty("User-Agent", "https://github.com/crschnick/pdx_unlimiter");
-            connection.addRequestProperty("Accept", "application/json");
-            connection.addRequestProperty("Content-Length", String.valueOf(data.length));
-            connection.addRequestProperty("rakaly-filename", sgName);
-
-            String encoding = Base64.getEncoder().encodeToString(
-                    (Settings.getInstance().getRakalyUserId().get() + ":" + Settings.getInstance().getRakalyApiKey().get())
-                            .getBytes(StandardCharsets.UTF_8));
-            connection.setRequestProperty("Authorization", "Basic " + encoding);
-            connection.setRequestProperty("Content-Type", "application/zip");
-
-            connection.setDoOutput(true);
-            DataOutputStream outputStream = new DataOutputStream(connection.getOutputStream());
-            outputStream.write(data);
-
-            int responseCode = connection.getResponseCode();
-            InputStream is;
-            if (responseCode != 200) {
-                is = connection.getErrorStream();
-            } else {
-                is = connection.getInputStream();
-            }
-
-            ObjectMapper o = new ObjectMapper();
-            JsonNode node = o.readTree(is.readAllBytes());
-
-            if (responseCode != 200) {
-                String msg = Optional.of(node.get("msg"))
-                        .map(JsonNode::textValue).orElse("Rakaly returned http " + responseCode);
-                throw new IOException(msg);
-            } else {
-                String saveId = node.required("save_id").textValue();
-                return saveId;
-            }
-        } finally {
-            if (connection != null) {
-                connection.disconnect();
-            }
-        }
-
-    }
-
-    public static <T, I extends SavegameInfo<T>> void analyzeEntry(SavegameStorage<T, I> cache, SavegameEntry<T, I> entry) {
-        TaskExecutor.getInstance().submitTask(() -> {
-            try {
-                ThreadHelper.browse("https://rakaly.com/eu4/analyze");
-            } catch (Exception e) {
-                GuiErrorReporter.showSimpleErrorMessage(e.getMessage());
+                ErrorHandler.handleException(e);
             }
         }, true);
     }
